fixed minor bug with scroll feature on mobile layouts

--- a/client/src/components/UserLayout/UserLayout.module.css
+++ b/client/src/components/UserLayout/UserLayout.module.css
@@ -14,6 +14,7 @@
 
 .right {
     flex: 1;
+    min-height: calc(100vh - var(--navbar-height));
 }
 
 /* ===== MEDIA QUERIES FOR SMALLER DEVICES ===== */
